update cargo package name

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "src"
+name = "tungstenite-server-client-sample"
 version = "0.1.0"
 authors = ["Arthur Coelho"]
 edition = "2018"
